# skillruled

./: .gitignore  README.md  demo.py  demo_cached.py  example_skill.md  pyproject.toml  skillruled.py  vigil.py
tests/: test_adapter.py  test_cached_workflow.py  test_cli_provenance_diff.py  test_evaluator.py
