[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skillruled"
version = "0.1.0"
description = "Runtime enforcement for agent skill specifications. Compiles NL boundaries from SKILL.md into cached, deterministic policy rules."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "ramdhanhdy"}]
keywords = ["agent", "skill", "enforcement", "policy", "runtime", "reference-monitor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
compile = []  # LLM compilation uses stdlib urllib; no extra deps needed
dev = ["pytest>=7.0"]

[project.scripts]
skillruled = "skillruled:cli"

[tool.setuptools]
py-modules = ["skillruled"]

[tool.pytest.ini_options]
testpaths = ["tests"]
